# auto_reply_tg_bot

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
requirements/: dev.txt  prod.txt
src/db/: database.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 11c874450ee2_tg_users.py
src/telegram_bot/: bot.py  main.py  templates.py
